--- a/.github/workflows/ingress.yaml
+++ b/.github/workflows/ingress.yaml
@@ -1,28 +1,28 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ayyaz-ingress
+  name: wp--ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false" 
-    certmanager.k8s.io/issuer: "ayyaz-letsencrypt-staging-issuer"
+    certmanager.k8s.io/issuer: "wp--letsencrypt-staging-issuer"
     certmanager.k8s.io/acme-challenge-type: http01
 spec:
   tls:
   - hosts:
     - recetarioketo.com
-    secretName: ayyaz-letsencrypt-staging-certificate
+    secretName: wp--letsencrypt-staging-certificate
   rules:
   - host: recetarioketo.com
     http:
       paths:
       - path: /
         backend:
-          serviceName: ayyazdemo-wordpress
+          serviceName: wp-demo-wordpress
           servicePort: 80
   - http:
       paths:
       - path: /
         backend:
-          serviceName: ayyazdemo-wordpress
+          serviceName: wp-demo-wordpress
           servicePort: 80
