--- a/staging-issuer.yaml
+++ b/staging-issuer.yaml
@@ -1,4 +1,4 @@
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: extensions/v1beta1
    kind: Issuer
    metadata:
      name: wp-letsencrypt-staging-issuer
